[gd_scene format=3 uid="uid://dchm1jf0isbs"]

[ext_resource type="Script" uid="uid://dtytg755jrh1a" path="res://main_menu.gd" id="1_s2c3o"]
[ext_resource type="Texture2D" uid="uid://36m622d0up2u" path="res://Assets/Menu/caracas.jpeg" id="2_ma218"]
[ext_resource type="FontFile" uid="uid://bs84xpuyran7j" path="res://Assets/Fonts/BoldPixels.ttf" id="3_idohh"]
[ext_resource type="FontFile" uid="uid://dagpd4e5r11m7" path="res://Assets/Fonts/m5x7.ttf" id="4_wfhf6"]

[sub_resource type="Theme" id="Theme_3jcrr"]
default_font = ExtResource("4_wfhf6")

[node name="CanvasLayer" type="CanvasLayer" unique_id=421932824]

[node name="MainMenu" type="Control" parent="." unique_id=890350338]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2c3o")

[node name="TextureRect" type="TextureRect" parent="MainMenu" unique_id=8481768]
layout_mode = 0
offset_right = 482.0
offset_bottom = 270.0
texture = ExtResource("2_ma218")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=267475928]
offset_right = 40.0
offset_bottom = 40.0

[node name="VainaMask" type="Label" parent="." unique_id=1963359681]
offset_left = 30.0
offset_top = 113.0
offset_right = 296.0
offset_bottom = 182.0
theme_override_fonts/font = ExtResource("3_idohh")
theme_override_font_sizes/font_size = 60
text = "VainaMask"

[node name="VBoxContainer2" type="VBoxContainer" parent="." unique_id=338094890]
offset_left = 71.0
offset_top = 175.0
offset_right = 230.0
offset_bottom = 293.0
theme = SubResource("Theme_3jcrr")

[node name="BtnPlay" type="Button" parent="VBoxContainer2" unique_id=1788881994]
layout_mode = 2
text = "Jugar"

[node name="BtnOptions" type="Button" parent="VBoxContainer2" unique_id=873334489]
layout_mode = 2
text = "Opciones"

[node name="BtnExit" type="Button" parent="VBoxContainer2" unique_id=851399199]
layout_mode = 2
text = "Salir
"

[connection signal="pressed" from="VBoxContainer2/BtnPlay" to="MainMenu" method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer2/BtnOptions" to="MainMenu" method="_on_btn_options_pressed"]
[connection signal="pressed" from="VBoxContainer2/BtnExit" to="MainMenu" method="_on_btn_exit_pressed"]
